--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-<h1>FUNCIONA</h1>
-<p>hola fernando.</p>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>ZEUS GPS</title>
+</head>
 
+<body>
+
+    <header>
+        <div class="box-1">
+            <div class="img-1">
+                <img src="/img/zeus 33.png" alt="">
+            </div>
+            <div class="menu-1">
+                <ul>
+                    <li><a href="">contactanos</a></li>
+                    <li><a href="">soat</a></li>
+                    <li><a href="">gps</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <div class="conteiner-1">
+        <img src="img/camion.jpg" alt="">
+        <div><h1>TU MEJOR ALEADO EN RASTREO SATELITAL</h1></div>
+    </div>
+</body>
+
+</html>
