--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="box-1">
             <div class="img-1">
-                <img src="/img/zeus33.png" alt="">
+                <img src="img/zeus33.png" alt="">
             </div>
             <div class="menu-1">
                 <ul>
@@ -33,3 +33,4 @@
 
 
 </html>
+
