--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
     <div class="conteiner-1">
         <img src="img/camion.jpg" alt="">
-        <div><h1>TU MEJOR ALEADO EN RASTREO SATELITAL</h1></div>
+        <div><h1>TU MEJOR ALIADO EN RASTREO SATELITAL</h1></div>
     </div>
 </body>
 
 
 </html>
+
 
