--- a/index.html
+++ b/index.html
@@ -27,11 +27,25 @@
 
     <div class="conteiner-1">
         <img src="img/camion.jpg" alt="">
-        <div><h1>TU MEJOR ALIADO EN RASTREO SATELITAL</h1></div>
+        <div>
+            <h1>TU MEJOR ALIADO EN RASTREO SATELITAL</h1>
+            <br>
+            <div>
+                <h3>Zeus GPS</h3>
+                <p></p>
+                Es una empresa especializada en rastreo satelital y soluciones de seguridad vehicular, enfocada
+                en brindar control total, protección y eficiencia a vehículos particulares, comerciales y flotas
+                empresariales.
+                <p></p>
+                Ofrecemos tecnología confiable que permite monitorear en tiempo real la ubicación de tus vehículos,
+                generar alertas inteligentes, prevenir robos y optimizar rutas. Nuestro compromiso es entregar un
+                servicio seguro, rápido y preciso, respaldado por atención personalizada y soporte permanente.
+                <p></p>
+                En Zeus GPS trabajamos para que siempre tengas el control en tus manos, con sistemas avanzados de
+                rastreo, instalación profesional y herramientas diseñadas para proteger lo que más importa.
+            </div>
+        </div>
     </div>
 </body>
 
-
 </html>
-
-
