--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 
 <head>
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
     <title>ZEUS GPS</title>
 </head>
 
@@ -26,12 +30,14 @@
     </header>
 
     <div class="conteiner-1">
-        <img src="img/camion.jpg" alt="">
+        <div class="conteiner-1-img"><img src="img/camion.jpg" alt=""></div>
         <div>
             <h1>TU MEJOR ALIADO EN RASTREO SATELITAL</h1>
             <br>
-            <div>
+            <br>
+            <div class="conteiner-1-ctd">
                 <h3>Zeus GPS</h3>
+                <br>
                 <p></p>
                 Es una empresa especializada en rastreo satelital y soluciones de seguridad vehicular, enfocada
                 en brindar control total, protección y eficiencia a vehículos particulares, comerciales y flotas
@@ -46,6 +52,38 @@
             </div>
         </div>
     </div>
+
+    <br><br><br>
+
+    <div class="conteiner-2">
+        <br><br><br>
+        <div class="conteiner-2-ctd">
+            <h1>TE OFRECEMOS SERVICIOS DE: </h1>
+            <br><br>
+            <ul>
+                <li>GPS</li>
+                <li>ALARMAS 12 Y 24 VOLTIOS</li>
+                <li>POLARIZADOS</li>
+                <li>VIDRIOS ELECTRICOS (NUEVOS, RAPARACION Y MANTENIMIENTO)</li>
+                <li>RADIOS</li>
+                <li>AMPLIFICADORES</li>
+                <li>LUCES LED</li>
+                <li>BLOQUEO CENTRAL</li>
+                <li>FORROS</li>
+                <li>POLARIZADOS</li>
+                <li>OVERHAUL</li>
+                <li>ELECTRIDAD AUTOMOTRIZ</li>
+                <li>AIRE ACONDICIONADO</li>
+                <li>PITOS</li>
+            </ul>
+        </div>
+        <div class="conteiner-2-img">
+            <img src="img/zeus55.png" alt="">
+        </div>
+    </div>
+
+
+
 </body>
 
 </html>
