--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+    <meta name="google-site-verification" content="d6FvsiXUCwmFtDLoNyDsbH6mlHRyvzuFmKOJYVmByUQ" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
@@ -85,5 +86,6 @@
 
 
 </body>
+
 
 </html>
