--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 
     <meta name="google-site-verification" content="d6FvsiXUCwmFtDLoNyDsbH6mlHRyvzuFmKOJYVmByUQ" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/zeus99.png" type="image/png">
+
+
+
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>ZEUS GPS</title>
+    <title>Zeus Gps</title>
 </head>
 
 <body>
@@ -83,9 +88,34 @@
         </div>
     </div>
 
+    <div class="conteiner-3">
+        .
+    </div>
 
 
+    <footer>
+
+        <div class="conteiner-4-img"><img src="img/zeus33.png" alt=""></div>
+
+        <ul>
+            <li><a href="">📞 Teléfono: 310 220 6602</a></li>
+            <li><a href="">📍 Dirección: (si tienes un local)</a></li>
+            <li><a href="">📧 Correo: (ej. soporte@zeusgps.com)</a></li>
+            <li><a href="">🕒 Horario: Lunes a sábado, 8am – 6pm (si aplica)</a></li>
+        </ul>
+        <ul>
+            <li><a href="">WhatsApp (obligatorio)</a></li>
+            <li><a href="">Sobre nosotros</a></li>
+            <li><a href="">Preguntas frecuentes</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">TikTok (opcional)</a></li>
+        </ul>
+
+         <ul><li>© 2025 ZEUS GPS — Rastreo Satelital y Seguridad Vehicular.</li></ul>
+    </footer>
 </body>
-
 
 </html>
