--- a/index.html
+++ b/index.html
@@ -36,60 +36,134 @@
     </header>
 
     <div class="conteiner-1">
-        <div class="conteiner-1-img"><img src="img/camion.jpg" alt=""></div>
-        <div>
+        <div class="conteiner-1-img">
+            <img src="img/camion.jpg" alt="Camión con sistema GPS">
+        </div>
+
+        <div class="conteiner-1-content">
             <h1>TU MEJOR ALIADO EN RASTREO SATELITAL</h1>
-            <br>
-            <br>
+
             <div class="conteiner-1-ctd">
                 <h3>Zeus GPS</h3>
-                <br>
-                <p></p>
-                Es una empresa especializada en rastreo satelital y soluciones de seguridad vehicular, enfocada
-                en brindar control total, protección y eficiencia a vehículos particulares, comerciales y flotas
-                empresariales.
-                <p></p>
-                Ofrecemos tecnología confiable que permite monitorear en tiempo real la ubicación de tus vehículos,
-                generar alertas inteligentes, prevenir robos y optimizar rutas. Nuestro compromiso es entregar un
-                servicio seguro, rápido y preciso, respaldado por atención personalizada y soporte permanente.
-                <p></p>
-                En Zeus GPS trabajamos para que siempre tengas el control en tus manos, con sistemas avanzados de
-                rastreo, instalación profesional y herramientas diseñadas para proteger lo que más importa.
+
+                <p>
+                    Somos una empresa especializada en rastreo satelital y soluciones de seguridad vehicular,
+                    enfocada en brindarte control total, protección y eficiencia para vehículos particulares,
+                    comerciales y flotas empresariales.
+                </p>
+
+                <p>
+                    Ofrecemos tecnología confiable que permite monitorear en tiempo real la ubicación de tus vehículos,
+                    generar alertas inteligentes, prevenir robos y optimizar rutas. Nuestro sistema está diseñado para
+                    responder rápido, con precisión y máxima estabilidad.
+                </p>
+
+                <p>
+                    En Zeus GPS trabajamos para que siempre tengas el control en tus manos. Te ofrecemos instalación
+                    profesional, servicio seguro y soporte permanente, brindando herramientas avanzadas para proteger
+                    lo que más importa.
+                </p>
             </div>
         </div>
     </div>
 
+
     <br><br><br>
 
     <div class="conteiner-2">
-        <br><br><br>
+
         <div class="conteiner-2-ctd">
-            <h1>TE OFRECEMOS SERVICIOS DE: </h1>
-            <br><br>
-            <ul>
-                <li>GPS</li>
-                <li>ALARMAS 12 Y 24 VOLTIOS</li>
-                <li>POLARIZADOS</li>
-                <li>VIDRIOS ELECTRICOS (NUEVOS, RAPARACION Y MANTENIMIENTO)</li>
-                <li>RADIOS</li>
-                <li>AMPLIFICADORES</li>
-                <li>LUCES LED</li>
-                <li>BLOQUEO CENTRAL</li>
-                <li>FORROS</li>
-                <li>POLARIZADOS</li>
-                <li>OVERHAUL</li>
-                <li>ELECTRIDAD AUTOMOTRIZ</li>
-                <li>AIRE ACONDICIONADO</li>
-                <li>PITOS</li>
+            <h1>TE OFRECEMOS SERVICIOS DE:</h1>
+
+            <ul class="servicios-lista">
+
+                <li><span>📡</span> GPS</li>
+                <li><span>🔊</span> Alarmas 12 y 24 voltios</li>
+                <li><span>🕶️</span> Polarizados</li>
+                <li><span>⚡</span> Vidrios eléctricos (nuevos, reparación y mantenimiento)</li>
+                <li><span>📻</span> Radios</li>
+                <li><span>🎚️</span> Amplificadores</li>
+                <li><span>💡</span> Luces LED</li>
+                <li><span>🔒</span> Bloqueo central</li>
+                <li><span>🪑</span> Forros</li>
+                <li><span>🎯</span> Overhaul</li>
+                <li><span>🔌</span> Electricidad automotriz</li>
+                <li><span>❄️</span> Aire acondicionado</li>
+                <li><span>📢</span> Pitos</li>
+
             </ul>
         </div>
+
         <div class="conteiner-2-img">
-            <img src="img/zeus55.png" alt="">
+            <img src="img/zeus55.png" alt="servicios zeus gps">
         </div>
+
     </div>
 
     <div class="conteiner-3">
-        .
+        <div class="beneficios">
+
+            <div class="item">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M12 2C8 2 5 5.3 5 9.4c0 5.1 7 12.6 7 12.6s7-7.5 7-12.6C19 5.3 16 2 12 2z" stroke="white"
+                        stroke-width="2" />
+                    <circle cx="12" cy="9" r="3" fill="white" />
+                </svg>
+                +100 Activos
+            </div>
+
+            <div class="item">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <circle cx="12" cy="12" r="9" stroke="white" stroke-width="2" />
+                    <path d="M12 6v6l4 2" stroke="white" stroke-width="2" stroke-linecap="round" />
+                </svg>
+                Plataforma 24/7
+            </div>
+
+            <div class="item">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path d="M12 2l8 4v6c0 5-4 8-8 10-4-2-8-5-8-10V6l8-4z" stroke="white" stroke-width="2" />
+                    <circle cx="12" cy="11" r="3" fill="white" />
+                </svg>
+                Alertas Inteligentes
+            </div>
+
+            <div class="item">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path d="M3 6l9-3 9 3-9 3-9-3z" stroke="white" stroke-width="2" />
+                    <path d="M3 10l9 3 9-3" stroke="white" stroke-width="2" />
+                    <path d="M3 14l9 3 9-3" stroke="white" stroke-width="2" />
+                </svg>
+                Historial de Recorridos
+            </div>
+
+            <div class="item">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <rect x="4" y="10" width="3" height="10" fill="white" />
+                    <rect x="9.5" y="6" width="3" height="14" fill="white" />
+                    <rect x="15" y="12" width="3" height="8" fill="white" />
+                </svg>
+                Reporte Automático
+            </div>
+
+            <div class="item">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <circle cx="12" cy="12" r="9" stroke="white" stroke-width="2" />
+                    <path d="M12 3v18M3 12h18" stroke="white" stroke-width="2" />
+                </svg>
+                Cobertura Nacional
+            </div>
+
+            <div class="item">
+                <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path d="M4 8c0-3 2-5 5-5h6c3 0 5 2 5 5v8c0 3-2 5-5 5H9c-3 0-5-2-5-5V8z" stroke="white"
+                        stroke-width="2" />
+                    <path d="M8 17l2-2 2 2 2-2 2 2" stroke="white" stroke-width="2" stroke-linecap="round" />
+                </svg>
+                Soporte Inmediato
+            </div>
+
+        </div>
     </div>
 
 
@@ -114,7 +188,9 @@
             <li><a href="">TikTok (opcional)</a></li>
         </ul>
 
-         <ul><li>© 2025 ZEUS GPS — Rastreo Satelital y Seguridad Vehicular.</li></ul>
+        <ul>
+            <li>© 2025 ZEUS GPS — Rastreo Satelital y Seguridad Vehicular.</li>
+        </ul>
     </footer>
 </body>
 
