--- a/index.html
+++ b/index.html
@@ -188,79 +188,126 @@
     </div>
 
 
+    <!-- ACOMPAÑAMIENTO POLICIAL - Zeus GPS (versión corregida) -->
+    <section class="zp-card-acompanamiento" aria-labelledby="zp-acomp-title">
+        <div class="zp-left">
+            <svg class="zp-badge" viewBox="0 0 64 64" aria-hidden="true">
+                <path d="M32 4c0 0-18 6-18 18 0 17 18 30 18 30s18-13 18-30C50 10 32 4 32 4z" fill="#0047ff" />
+                <circle cx="32" cy="26" r="6" fill="#ffdd00" />
+                <path d="M26 36c2 2 4 3 6 3s4-1 6-3" stroke="#fff" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
 
-<div class="platform-container">
+            <!-- Caja para la imagen: reemplaza la ruta -->
+            <div class="zp-image-box">
+                <img src="img/policia.jpg" alt="Imagen acompañamiento policial" />
+            </div>
+        </div>
 
-    <!-- MASCOTA SVG CON GPS EN LA MANO -->
-    <div class="mascot-svg">
-        <svg width="200" height="280" viewBox="0 0 200 280" xmlns="http://www.w3.org/2000/svg">
+        <div class="zp-card-body">
+            <h3 id="zp-acomp-title">Acompañamiento Policial en Caso de Emergencia</h3>
 
-            <!-- sombra -->
-            <ellipse cx="100" cy="265" rx="55" ry="18" fill="rgba(0,0,0,0.25)" />
+            <p class="zp-lead">
+                Acompañamiento policial en caso de emergencia
 
-            <!-- gorra -->
-            <rect x="45" y="25" width="110" height="40" rx="10" fill="#0047FF"/>
-            <rect x="62" y="15" width="80" height="25" rx="12" fill="#0037CC"/>
-            <!-- logo Z -->
-            <text x="100" y="42" font-size="22" font-weight="800" text-anchor="middle" fill="#FFDD00">Z</text>
+                En Zeus GPS S.A.S contamos con un sistema de respuesta inmediata que activa el
+                acompañamiento policial en situaciones de emergencia. Cuando se presiona el botón
+                de pánico o se detecta un evento crítico, nuestro equipo coordina con las autoridades
+                para actuar con rapidez.
 
-            <!-- cabello -->
-            <path d="M55 55 q45 -40 90 0" stroke="#2E2E2E" stroke-width="10" stroke-linecap="round" />
+            </p>
 
-            <!-- cabeza -->
-            <circle cx="100" cy="105" r="55" fill="#FFDD66" stroke="#E4B84C" stroke-width="5"/>
+            <ul class="zp-features" aria-label="Servicios incluidos">
+                <li>✅ <strong>Atención rápida y oportuna</strong></li>
+                <li>✅ <strong>Coordinación directa con autoridades</strong></li>
+                <li>✅ <strong>Ubicación precisa en tiempo real</strong></li>
+                <li>✅ <strong>Seguimiento hasta la resolución</strong></li>
+            </ul>
 
-            <!-- ojos con animación -->
-            <circle class="eye-blink" cx="78" cy="95" r="10" fill="#000"/>
-            <circle class="eye-blink" cx="122" cy="95" r="10" fill="#000"/>
-
-            <!-- boca -->
-            <path d="M75 125 Q100 145 125 125" stroke="#000" stroke-width="5" fill="none" stroke-linecap="round"/>
-
-            <!-- cuerpo -->
-            <rect x="65" y="160" width="70" height="100" rx="20" fill="#0047FF" />
-
-            <!-- brazo izquierdo horizontal -->
-            <rect x="35" y="165" width="30" height="25" rx="10" fill="#FFDD66"/>
-            <!-- brazo izquierdo vertical -->
-            <rect x="42" y="165" width="14" height="75" rx="7" fill="#FFDD66"/>
-
-            <!-- brazo derecho horizontal -->
-            <rect x="135" y="165" width="30" height="25" rx="10" fill="#FFDD66"/>
-
-            <!-- brazo derecho vertical (sostiene GPS) -->
-            <rect x="144" y="165" width="14" height="75" rx="7" fill="#FFDD66"/>
-
-            <!-- GPS EN LA MANO DERECHA -->
-            <g transform="translate(150, 195) rotate(-10)">
-                <!-- cuerpo del GPS -->
-                <rect x="-10" y="-25" width="40" height="55" rx="6" fill="#0037CC" stroke="#001A66" stroke-width="3"/>
-                
-                <!-- pantalla -->
-                <rect x="-2" y="-18" width="24" height="28" rx="4" fill="#111" stroke="#444" stroke-width="2"/>
-
-                <!-- icono ubicación dentro -->
-                <circle cx="10" cy="-5" r="6" fill="#FFDD00"/>
-                <circle class="gps-light" cx="10" cy="-5" r="3" fill="#D90000"/>
+            <div class="zp-cta-row">
+                <a class="zp-cta" href="#contacto">Solicitar este servicio</a>
+                <small class="zp-note">Disponible 24/7 — Prioridad máxima en respuesta</small>
+            </div>
+        </div>
+    </section>
 
 
-                <!-- antena -->
-                <rect x="8" y="-35" width="4" height="12" rx="2" fill="#FFDD00"/>
-            </g>
 
-        </svg>
+
+    <div class="platform-container">
+
+        <!-- MASCOTA SVG CON GPS EN LA MANO -->
+        <div class="mascot-svg">
+            <svg width="200" height="280" viewBox="0 0 200 280" xmlns="http://www.w3.org/2000/svg">
+
+                <!-- sombra -->
+                <ellipse cx="100" cy="265" rx="55" ry="18" fill="rgba(0,0,0,0.25)" />
+
+                <!-- gorra -->
+                <rect x="45" y="25" width="110" height="40" rx="10" fill="#0047FF" />
+                <rect x="62" y="15" width="80" height="25" rx="12" fill="#0037CC" />
+                <!-- logo Z -->
+                <text x="100" y="42" font-size="22" font-weight="800" text-anchor="middle" fill="#FFDD00">Z</text>
+
+                <!-- cabello -->
+                <path d="M55 55 q45 -40 90 0" stroke="#2E2E2E" stroke-width="10" stroke-linecap="round" />
+
+                <!-- cabeza -->
+                <circle cx="100" cy="105" r="55" fill="#FFDD66" stroke="#E4B84C" stroke-width="5" />
+
+                <!-- ojos con animación -->
+                <circle class="eye-blink" cx="78" cy="95" r="10" fill="#000" />
+                <circle class="eye-blink" cx="122" cy="95" r="10" fill="#000" />
+
+                <!-- boca -->
+                <path d="M75 125 Q100 145 125 125" stroke="#000" stroke-width="5" fill="none" stroke-linecap="round" />
+
+                <!-- cuerpo -->
+                <rect x="65" y="160" width="70" height="100" rx="20" fill="#0047FF" />
+
+                <!-- brazo izquierdo horizontal -->
+                <rect x="35" y="165" width="30" height="25" rx="10" fill="#FFDD66" />
+                <!-- brazo izquierdo vertical -->
+                <rect x="42" y="165" width="14" height="75" rx="7" fill="#FFDD66" />
+
+                <!-- brazo derecho horizontal -->
+                <rect x="135" y="165" width="30" height="25" rx="10" fill="#FFDD66" />
+
+                <!-- brazo derecho vertical (sostiene GPS) -->
+                <rect x="144" y="165" width="14" height="75" rx="7" fill="#FFDD66" />
+
+                <!-- GPS EN LA MANO DERECHA -->
+                <g transform="translate(150, 195) rotate(-10)">
+                    <!-- cuerpo del GPS -->
+                    <rect x="-10" y="-25" width="40" height="55" rx="6" fill="#0037CC" stroke="#001A66"
+                        stroke-width="3" />
+
+                    <!-- pantalla -->
+                    <rect x="-2" y="-18" width="24" height="28" rx="4" fill="#111" stroke="#444" stroke-width="2" />
+
+                    <!-- icono ubicación dentro -->
+                    <circle cx="10" cy="-5" r="6" fill="#FFDD00" />
+                    <circle class="gps-light" cx="10" cy="-5" r="3" fill="#D90000" />
+
+
+                    <!-- antena -->
+                    <rect x="8" y="-35" width="4" height="12" rx="2" fill="#FFDD00" />
+                </g>
+
+            </svg>
+        </div>
+
+        <!-- Tarjeta -->
+        <div class="gps-card">
+            <h2>Plataforma GPS</h2>
+
+            <p>Accede a la plataforma de rastreo en tiempo real.</p>
+
+            <a href="https://gpsmobile.pro/es/main/" target="_blank" class="gps-btn">
+                Ingresar Ahora
+            </a>
+        </div>
     </div>
-
-    <!-- Tarjeta -->
-    <div class="gps-card">
-        <h2>Plataforma GPS</h2>
-        <p>Accede a la plataforma de rastreo en tiempo real.</p>
-
-        <a href="https://gpsmobile.pro/es/main/" target="_blank" class="gps-btn">
-            Ingresar Ahora
-        </a>
-    </div>
-</div>
 
 
 
