--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>Zeus Gps</title>
+    <title>Zeus Gps S.A.S</title>
 
 
 </head>
 
 <body>
+
 
     <header>
         <div class="box-1">
@@ -48,6 +49,8 @@
         </div>
     </header>
 
+
+
     <!-- SCRIPT PARA ABRIR / CERRAR MENÚ -->
     <script>
         function toggleMenu() {
@@ -62,13 +65,13 @@
         </div>
 
         <div class="conteiner-1-content">
-            <h1>TU MEJOR ALIADO EN RASTREO SATELITAL</h1>
+            <h1>ZEUS GPS S.A.S</h1>
 
             <div class="conteiner-1-ctd">
-                <h3>Zeus GPS S.A.S</h3>
+                <h3>TU MEJOR ALIADO EN RASTREO SATELITAL</h3>
 
                 <p>
-                    Somos una empresa especializada en rastreo satelital y soluciones de seguridad vehicular,
+                    Es una empresa especializada en rastreo satelital y soluciones de seguridad vehicular,
                     enfocada en brindarte control total, protección y eficiencia para vehículos particulares,
                     comerciales y flotas empresariales.
                 </p>
@@ -91,9 +94,8 @@
 
     <section class="info-section reveal">
         <div class="info-card">
-            <h2>Visión</h2>
+            <h2>🌟 Visión</h2>
             <p>
-                🌟 Visión
 
                 Ser la empresa líder en rastreo satelital y seguridad vehicular en Colombia, reconocida por nuestra
                 innovación, precisión y confianza. Queremos que cada cliente sienta la tranquilidad de tener su vehículo
@@ -105,9 +107,9 @@
 
     <section class="info-section reveal">
         <div class="info-card">
-            <h2>Misión</h2>
+            <h2>🎯Misión</h2>
             <p>
-                🎯 Misión
+
 
                 Brindar soluciones de rastreo satelital, seguridad y control vehicular que garanticen protección,
                 eficiencia y tranquilidad a nuestros clientes. Nos comprometemos a ofrecer un servicio confiable,
@@ -138,7 +140,7 @@
 
 
 
-    <br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 
     <div class="conteiner-2">
 
@@ -373,14 +375,68 @@
             <li><a href="">🕒 Horario: Lunes a sábado, 8am – 6pm (si aplica)</a></li>
         </ul>
         <ul>
-            <li><a href="">WhatsApp (obligatorio)</a></li>
-            <li><a href="">Sobre nosotros</a></li>
-            <li><a href="">Preguntas frecuentes</a></li>
+            <li>
+                <a href="#">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M12 2a10 10 0 0 0-8.8 14.9L2 22l5.3-1.4A10 10 0 1 0 12 2zm.1 3.1a6.8 6.8 0 0 1 6.8 6.8 6.7 6.7 0 0 1-6.8 6.7h-.1a6.8 6.8 0 0 1-3.5-1l-.3-.2-2.5.7.7-2.4-.2-.3a6.7 6.7 0 0 1-1-3.5 6.8 6.8 0 0 1 6.9-6.8zm4 9.7c-.2-.1-1.3-.6-1.4-.7s-.3-.1-.5.1-.6.7-.7.8-.3.2-.6.1a5.5 5.5 0 0 1-2.6-2.3c-.2-.4-.2-.5 0-.7l.7-.8c.1-.2.1-.3 0-.5l-.7-1.6c-.2-.4-.4-.4-.6-.4h-.5c-.2 0-.5.1-.8.4a3 3 0 0 0-1 2.2 5.5 5.5 0 0 0 1.2 3.1 12.4 12.4 0 0 0 4.6 4c2.3 1 2.7.9 3.1.9a3.1 3.1 0 0 0 2.1-1.4c.2-.5.2-.9.2-1s0-.2-.2-.3z" />
+                    </svg>
+                    WhatsApp
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5zm0 2c-4 0-8 2-8 5v1h16v-1c0-3-4-5-8-5z" />
+                    </svg>
+                    Sobre nosotros
+                </a>
+            </li>
+
+            <li>
+                <a href="#">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 15a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 17zm1.2-5.8c-.9.6-1.2 1-1.2 2h-1.8c0-1.6.6-2.6 2-3.5 1.1-.7 1.6-1.1 1.6-2a2 2 0 1 0-4 0H8c0-2.2 1.8-4 4-4s4 1.8 4 4c0 1.9-1.2 2.9-2.8 3.5z" />
+                    </svg>
+                    Preguntas Frecuentes
+                </a>
+            </li>
+
         </ul>
         <ul>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">TikTok (opcional)</a></li>
+            <ul>
+                <li>
+                    <a href="#">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2v-2.9h2V9a3 3 0 0 1 3.2-3.3 13 13 0 0 1 1.9.2v2.1h-1.1a1.1 1.1 0 0 0-1.2 1.2v1.6h2.3l-.4 2.9h-1.9v7A10 10 0 0 0 22 12z" />
+                        </svg>
+                        Facebook
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M7 2C4 2 2 4.2 2 7.3v9.4C2 19.8 4 22 7 22h10c3 0 5-2.2 5-5.3V7.3C22 4.2 20 2 17 2H7zm8.6 5.3c.5 0 1 .6 1 1.4a1.4 1.4 0 0 1-1 1.4c-.5 0-1-.6-1-1.4s.5-1.4 1-1.4zM12 8.7A3.3 3.3 0 1 1 8.7 12 3.3 3.3 0 0 1 12 8.7zm0 1.8A1.6 1.6 0 1 0 13.6 12 1.6 1.6 0 0 0 12 10.5z" />
+                        </svg>
+                        Instagram
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M9.5 3l9 4-6 3 6 3-9 4-9-4 6-3-6-3 9-4z" />
+                        </svg>
+                        TikTok
+                    </a>
+                </li>
+            </ul>
+
         </ul>
 
         <ul>
