--- a/index.html
+++ b/index.html
@@ -361,6 +361,9 @@
     </div>
 
 
+    
+
+
 
 
 
@@ -443,6 +446,13 @@
             <li>© 2025 ZEUS GPS — Rastreo Satelital y Seguridad Vehicular.</li>
         </ul>
     </footer>
+
+<a href="https://wa.me/573102206602" class="whatsapp-float" target="_blank">
+    <svg viewBox="0 0 32 32" class="wp-icon">
+        <path fill="#fff" d="M16.002 3.2c-7.03 0-12.8 5.77-12.8 12.8 0 2.26.59 4.46 1.72 6.4l-1.82 6.65 6.82-1.79c1.84.99 3.92 1.51 6.08 1.51h.01c7.03 0 12.8-5.77 12.8-12.8s-5.77-12.8-12.81-12.8zm6.93 18.27c-.29.82-1.7 1.57-2.38 1.66-.61.09-1.4.12-2.26-.14-.52-.17-1.19-.39-2.05-.76-3.61-1.56-5.96-5.2-6.14-5.44-.18-.24-1.47-1.95-1.47-3.72s.93-2.64 1.27-3.01c.34-.37.74-.46.99-.46.24 0 .49 0 .7.01.23.01.53-.09.83.63.29.71 1 2.46 1.09 2.64.09.18.13.39.03.63-.09.24-.14.39-.28.6-.14.2-.3.45-.43.6-.14.15-.29.32-.12.63.17.32.75 1.24 1.61 2.01 1.11.99 2.04 1.3 2.36 1.45.32.15.51.13.69-.08.17-.2.79-.92 1-1.23.2-.31.42-.26.7-.16.28.09 1.77.83 2.07.98.3.15.5.23.57.36.06.13.06.85-.23 1.67z"/>
+    </svg>
+</a>
+
 </body>
 
 </html>
