--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <ul>
             <li>📞 Teléfono: 316 538 1078</li>
             <li><a href="mailto:zeusgpscolombia@gmail.com">📧 Correo: zeusgpscolombia@gmail.com</a></li>
-            <li><a href="">🕒 Horario: Lunes a sábado, 8am – 6pm</a></li>
+            <li>🕒 Horario: Lunes a sábado, 8am – 6pm</li>
         </ul>
         <ul>
 
