--- a/soat.html
+++ b/soat.html
@@ -125,10 +125,10 @@ document.getElementById("formSOAT").addEventListener("submit", function(e){
     let placa = document.getElementById("placa").value;
 
 let mensaje = `Hola, quiero cotizar un SOAT:
-🚗 Vehículo: ${vehiculo}
-🔢 Placa: ${placa}
+🚘 Vehículo: ${vehiculo}
+🔖 Placa: ${placa}
 
-👤 Nombre: ${nombre}`;
+🙂 Nombre: ${nombre}`;
 ;
 
     let url = `https://wa.me/573102206602?text=${encodeURIComponent(mensaje)}`;
