--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta name="google-site-verification" content="d6FvsiXUCwmFtDLoNyDsbH6mlHRyvzuFmKOJYVmByUQ" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/zeus99.png">
+    <link rel="shortcut icon" href="img/zeus99.png" type="image/png">
     <meta name="description"
         content="Zeus GPS S.A.S - Empresa especializada en rastreo satelital, GPS para vehículos, alarmas, polarizados, vidrios eléctricos y más.">
 
@@ -508,5 +508,6 @@
 
 
 </body>
+
 
 </html>
