--- a/index.html
+++ b/index.html
@@ -160,22 +160,61 @@
 
             <ul class="servicios-lista">
 
-                <li><span>📡</span> GPS</li>
-                <li><span>🔊</span> Alarmas 12 y 24 voltios</li>
-                <li><span>🕶️</span> Polarizados</li>
-                <li><span>⚡</span> Vidrios eléctricos (nuevos, reparación y mantenimiento)</li>
-                <li><span>📻</span> Radios</li>
-                <li><span>🎚️</span> Amplificadores</li>
-                <li><span>💡</span> Luces LED</li>
-                <li><span>🔒</span> Bloqueo central</li>
-                <li><span>🪑</span> Forros</li>
-                <li><span>🎯</span> Overhaul</li>
-                <li><span>🔌</span> Electricidad automotriz</li>
-                <li><span>❄️</span> Aire acondicionado</li>
-                <li><span>📢</span> Pitos</li>
+                <li onclick="mostrarInfo(this)" data-info="Marcas GPS: Coban, Concox, Teltonika">
+                    <span>📡</span> GPS
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Marcas de alarmas: Scorpion, Positron, Excalibur">
+                    <span>🔊</span> Alarmas 12 y 24 voltios
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Polarizados: NanoCerámico, UV Premium, Oscurecimiento legal">
+                    <span>🕶️</span> Polarizados
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Vidrios eléctricos: General Motors, Ford, Toyota, Renault">
+                    <span>⚡</span> Vidrios eléctricos (nuevos, reparación y mantenimiento)
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Radios: Pioneer, Kenwood, Sony">
+                    <span>📻</span> Radios
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Amplificadores: Boss, Pioneer, JBL, Kicker">
+                    <span>🎚️</span> Amplificadores
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Luces LED: Osram, Philips, TechOne">
+                    <span>💡</span> Luces LED
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Bloqueos: Sealock, Fortress, Torino">
+                    <span>🔒</span> Bloqueo central
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Forros: Cuero Premium, Automax, Sport Line">
+                    <span>🪑</span> Forros
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Overhaul: Motores gasolina y diésel">
+                    <span>🎯</span> Overhaul
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Electricidad automotriz: Chevy, Mazda, Toyota, Renault">
+                    <span>🔌</span> Electricidad automotriz
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Aire acondicionado: Delphi, Denso, CoolCar">
+                    <span>❄️</span> Aire acondicionado
+                </li>
+
+                <li onclick="mostrarInfo(this)" data-info="Pitos: Fiamm, Bosch, Hella">
+                    <span>📢</span> Pitos
+                </li>
 
             </ul>
         </div>
+
 
         <div class="conteiner-2-img">
             <img src="img/zeus55.png" alt="servicios zeus gps">
@@ -457,117 +496,6 @@
                 d="M16.002 3.2c-7.03 0-12.8 5.77-12.8 12.8 0 2.26.59 4.46 1.72 6.4l-1.82 6.65 6.82-1.79c1.84.99 3.92 1.51 6.08 1.51h.01c7.03 0 12.8-5.77 12.8-12.8s-5.77-12.8-12.81-12.8zm6.93 18.27c-.29.82-1.7 1.57-2.38 1.66-.61.09-1.4.12-2.26-.14-.52-.17-1.19-.39-2.05-.76-3.61-1.56-5.96-5.2-6.14-5.44-.18-.24-1.47-1.95-1.47-3.72s.93-2.64 1.27-3.01c.34-.37.74-.46.99-.46.24 0 .49 0 .7.01.23.01.53-.09.83.63.29.71 1 2.46 1.09 2.64.09.18.13.39.03.63-.09.24-.14.39-.28.6-.14.2-.3.45-.43.6-.14.15-.29.32-.12.63.17.32.75 1.24 1.61 2.01 1.11.99 2.04 1.3 2.36 1.45.32.15.51.13.69-.08.17-.2.79-.92 1-1.23.2-.31.42-.26.7-.16.28.09 1.77.83 2.07.98.3.15.5.23.57.36.06.13.06.85-.23 1.67z" />
         </svg>
     </a>
-
-    <!-- CHAT OCULTO -->
-    <div class="chat-box" id="chatBox" style="display:none;">
-
-        <div class="chat-header">
-            <span>Chat Zeus GPS</span>
-            <button class="cerrarChat" onclick="cerrarChat()">❌</button>
-        </div>
-
-        <div class="messages" id="messages"></div>
-
-        <div class="chat-input">
-            <input type="text" id="pregunta" placeholder="Escribe aquí...">
-            <button onclick="enviarMensaje()">Enviar</button>
-        </div>
-
-    </div>
-
-    <script>
-        function buscarTexto() {
-            let texto = document.getElementById("buscador").value.trim().toLowerCase();
-            if (texto === "") return;
-
-            // Remover resaltados anteriores
-            document.querySelectorAll(".highlight").forEach(el => {
-                el.outerHTML = el.innerHTML;
-            });
-
-            let walker = document.createTreeWalker(document.body, NodeFilter.SHOW_TEXT);
-            let encontrado = false;
-
-            while (walker.nextNode()) {
-                let nodo = walker.currentNode;
-                let index = nodo.textContent.toLowerCase().indexOf(texto);
-
-                if (index !== -1) {
-                    let span = document.createElement("span");
-                    span.classList.add("highlight");
-
-                    let original = nodo.textContent;
-                    let antes = original.slice(0, index);
-                    let match = original.slice(index, index + texto.length);
-                    let despues = original.slice(index + texto.length);
-
-                    span.textContent = match;
-
-                    let contenedor = document.createElement("span");
-                    contenedor.innerHTML = antes;
-                    contenedor.appendChild(span);
-                    contenedor.innerHTML += despues;
-
-                    nodo.parentNode.replaceChild(contenedor, nodo);
-
-                    span.scrollIntoView({ behavior: "smooth", block: "center" });
-
-                    encontrado = true;
-                    break;
-                }
-            }
-
-            if (!encontrado) {
-                alert("No se encontraron resultados");
-            }
-        }
-    </script>
-
-
-    <script>
-    // Abrir chat
-    document.getElementById("abrirChat").onclick = function () {
-        document.getElementById("chatBox").style.display = "block";
-    };
-
-    // Cerrar chat
-    function cerrarChat() {
-        document.getElementById("chatBox").style.display = "none";
-    }
-
-    async function enviarMensaje() {
-        let texto = document.getElementById("pregunta").value.trim();
-        if (texto === "") return;
-
-        mostrar("user", texto);
-        document.getElementById("pregunta").value = "";
-
-        let respuesta = await consultarGroq(texto);
-        mostrar("bot", respuesta);
-    }
-
-    function mostrar(tipo, mensaje) {
-        let chat = document.getElementById("messages");
-        let div = document.createElement("div");
-        div.className = tipo;
-        div.innerText = mensaje;
-        chat.appendChild(div);
-        chat.scrollTop = chat.scrollHeight;
-    }
-
-    // 👉 AHORA EL CHAT LE HABLA AL WORKER
-    async function consultarGroq(texto) {
-
-        const respuesta = await fetch("https://divine-brook-66bf.zeusgpssoporte.workers.dev/", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ message: texto })
-        });
-
-        const data = await respuesta.json();
-        return data.reply;
-    }
-</script>
 
 
 
